codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__footer__tests__footer_shortcuts_collaboration_modes_enabled.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  Keyboard shortcuts                                                            "
"                                                                                "
"  Compose                       Session                                         "
"  /        Commands             tab   Send message                              "
"  @        Mention files        ⇧tab  Change mode                               "
"  !        Shell command        ⌥,    Less reasoning                            "
"  ⌃j       New line             ⌥.    More reasoning                            "
"  ⌃v       Paste image          ⌥m    Switch recent model                       "
"  ⌃g       External editor      f8    Voice                                     "
"  ⌃r       Search history       f4    Inspect activity                          "
"  esc esc  Edit last message    ⌃c    Quit                                      "
"                                                                                "
"                                Transcript (open first)                         "
"                                ⌃t            Open transcript                   "
"                                f3            Find text                         "
"                                pgup / pgdn   Scroll                            "
"                                ⌃space        Start selection                   "
"                                ⌃home / ⌃end  Top / latest                      "
"                                ⇧⌥, / ⇧⌥.     Top / latest                      "
"                                                                                "
"  /keymap customize                                                             "
