codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__footer__tests__footer_shortcuts_shift_and_esc.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  Keyboard shortcuts                                                            "
"                                                                                "
"  Compose                      Session                                          "
"  /       Commands             tab  Send message                                "
"  @       Mention files        ⌥,   Less reasoning                              "
"  !       Shell command        ⌥.   More reasoning                              "
"  ⇧enter  New line             ⌥m   Switch recent model                         "
"  ⌃v      Paste image          f8   Voice                                       "
"  ⌃g      External editor      f4   Inspect activity                            "
"  ⌃r      Search history       ⌃c   Quit                                        "
"  esc     Edit last message                                                     "
"                               Transcript (open first)                          "
"                               ⌃t            Open transcript                    "
"                               f3            Find text                          "
"                               pgup / pgdn   Scroll                             "
"                               ⌃space        Start selection                    "
"                               ⌃home / ⌃end  Top / latest                       "
"                               ⇧⌥, / ⇧⌥.     Top / latest                       "
"                                                                                "
"  /keymap customize                                                             "
